# hybrid-control-pwa

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clean_build_cache.sh  offline_rebuild.sh
hcpwa/: CMakeLists.txt
hcpwa/include/: affine_approximator.h  algo.hpp  cdd.hpp  float.hpp  global_affine_approximator.h  global_affine_approximator.hpp  hcpwa.hpp  interval_building.hpp  lin_set.hpp  lineareq.hpp  matrix.hpp  morph.hpp  piecewise_affine_approximator.h  symbolic.hpp  thread_pool.hpp  types.hpp  uniqie_pool.hpp  utility.hpp  vector.hpp
hcpwa/include/cddwrap/: cdd.hpp  lineareq.hpp  matrix.hpp
hcpwa/include/util/: affine_lp_utils.hpp  assert_utils.hpp  sparse_matrix_utils.hpp  value_function_utils.hpp
hcpwa/src/: affine_appoximator.cpp  algo.cpp  cdd.cpp  global_affine_appoximator.cpp  hcpwa.cpp  linearq.cpp  piecewise_affine_appoximator.cpp  user_algo.cpp
hcpwa/src/cddwrap/: cdd.cpp  linearq.cpp
notebooks/: estimate_colver_runs.ipynb
results/sample_1/: init_params.json  value_function.json
results/sample_2/: init_params.json  t_range.json  value_function.json
solver/: CMakeLists.txt
solvers/: CMakeLists.txt
test/: CMakeLists.txt  test_utils.hpp
test/cdd/: hull.cpp
test/common/: affine_solver.cpp  common.cpp  complex.cpp  init.cpp  math.cpp  user_algo_tests.cpp  value_function_utils.cpp
